Change font size

--- a/FE/module1/index.html
+++ b/FE/module1/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<p style="color: blue">Hello, World!</p>
-	<b style="color: red">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, deleniti.</b>
+	<b style="color: blue; font-size: 30px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, deleniti.</b>
 	<br/>
 	<i>numquam quis fuga, vitae, veniam ratione deserunt quos pariatur, cum sed blanditiis architecto deleniti sapiente.
 	Repudiandae quae molestiae magnam.</i> 
