--- a/FE/module1/index.html
+++ b/FE/module1/index.html
@@ -11,7 +11,16 @@
 	<i>numquam quis fuga, vitae, veniam ratione deserunt quos pariatur, cum sed blanditiis architecto deleniti sapiente.
 	Repudiandae quae molestiae magnam.</i> 
 	<br />
-	Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo expedita officiis necessitatibus laudantium aut ab rerum quae porro adipisci sint culpa doloremque pariatur, quaerat eveniet quos quas, fuga reiciendis sed.
+	<b style="color: green; font-size: 20px">
+		<i>
+			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo expedita officiis necessitatibus laudantium aut ab
+			rerum quae porro adipisci sint culpa doloremque pariatur, quaerat eveniet quos quas, fuga reiciendis sed.
+		</i>
+	</b>
+	<br />
+	<a href="http://google.com" target="_blank" title="Пошукова система Google">
+		Google.com
+	</a>
 </body>
 </html>
 
