--- a/FE/module1/index.html
+++ b/FE/module1/index.html
@@ -5,7 +5,20 @@
 	<title>Document</title>
 </head>
 <body>
-	<p style="color: blue">Hello, World!</p>
+	<!-- <p 
+	style="color: blue"
+	>
+	Hello, World!
+	</p> -->
+	<p>
+		Hello, World!
+	</p>
+	<p>
+		<h1>h-1_Hello, World!</h1>
+		<h2>h-2_Hello, World!</h2>
+		<h3>h-3_Hello, World!</h3>
+		<h4>h-4_Hello, World!</h4>
+	</p>
 	<b style="color: red; font-size: 30px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, deleniti.</b>
 	<br/>
 	<i>numquam quis fuga, vitae, veniam ratione deserunt quos pariatur, cum sed blanditiis architecto deleniti sapiente.
@@ -18,9 +31,19 @@
 		</i>
 	</b>
 	<br />
-	<a href="http://google.com" target="_blank" title="Пошукова система Google">
+	<a 
+		href="http://google.com" 
+		target="_blank" 
+		title="Пошукова система Google"
+	>
 		Google.com
 	</a>
+	<br />
+	<img 
+		src="https://picsum.photos/640/480" 
+		alt="Довільна картинка від генератора" 
+	/>
+	<br />
 </body>
 </html>
 
