--- a/FE/module1/index.html
+++ b/FE/module1/index.html
@@ -14,17 +14,19 @@
 		Hello, World!
 	</p>
 	<p>
-		<h1>h-1_Hello, World!</h1>
-		<h2>h-2_Hello, World!</h2>
-		<h3>h-3_Hello, World!</h3>
-		<h4>h-4_Hello, World!</h4>
+		<h1>h-1_Title</h1>
+		<h2>h-2_Title</h2>
+		<h3>h-3_Title</h3>
+		<h4>h-4_Title</h4>
 	</p>
 	<b style="color: red; font-size: 30px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, deleniti.</b>
 	<br/>
 	<i>numquam quis fuga, vitae, veniam ratione deserunt quos pariatur, cum sed blanditiis architecto deleniti sapiente.
 	Repudiandae quae molestiae magnam.</i> 
 	<br />
-	<b style="color: green; font-size: 20px">
+	<b 
+	style="color: green; font-size: 20px"
+	>
 		<i>
 			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo expedita officiis necessitatibus laudantium aut ab
 			rerum quae porro adipisci sint culpa doloremque pariatur, quaerat eveniet quos quas, fuga reiciendis sed.
@@ -41,7 +43,8 @@
 	<br />
 	<img 
 		src="https://picsum.photos/640/480" 
-		alt="Довільна картинка від генератора" 
+		alt="Довільна картинка від генератора"
+		width="600px"
 	/>
 	<br />
 </body>
