--- a/FE/module1/index.html
+++ b/FE/module1/index.html
@@ -6,24 +6,33 @@
 </head>
 <body>
 	<p 
-	style="color: blue"
+		style="color: blue"
 	>
-	Hello, World!
+		Hello, World!
 	</p>
+	
 	<p>
 		Hello, World!
 	</p>
+
 	<p>
 		<h1>h-1_Title</h1>
 		<h2>h-2_Title</h2>
 		<h3>h-3_Title</h3>
 		<h4>h-4_Title</h4>
 	</p>
-	<b style="color: red; font-size: 30px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, deleniti.</b>
+
+	<b 
+		style="color: red; font-size: 30px"
+	>
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, deleniti.
+	</b>
 	<br/>
+
 	<i>numquam quis fuga, vitae, veniam ratione deserunt quos pariatur, cum sed blanditiis architecto deleniti sapiente.
 	Repudiandae quae molestiae magnam.</i> 
 	<br />
+
 	<b 
 	style="color: green; font-size: 20px"
 	>
@@ -33,6 +42,7 @@
 		</i>
 	</b>
 	<br />
+
 	<a 
 		href="http://google.com" 
 		target="_blank" 
@@ -41,24 +51,13 @@
 		Google.com
 	</a>
 	<br />
+
 	<img 
 		src="https://picsum.photos/640/480" 
 		alt="Довільна картинка від генератора"
 		width="600px"
 	/>
 	<br />
+
 </body>
 </html>
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	
-</body>
-</html> -->
